fix: prevent white space on header/footer scroll (#454)

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -6,6 +6,17 @@
  */
 
 /* Reset */
+html, body {
+  height: 100%;
+  width:100%;
+  margin: 0;
+  padding: 0;
+  overflow-y:auto;
+  overflow-x:hidden;
+  overscroll-behavior: contain;
+}
+
+
 html,
 body,
 div,
